fixed spacing of tags and post titles

--- a/app/global.css
+++ b/app/global.css
@@ -146,5 +146,5 @@ table {
 }
 
 .title {
-  text-wrap: balance;
+  text-wrap: pretty;
 }
